# plugin_java

./: .env.example  .gitignore  README.md  docker-compose.yml
.docker/images/linux_java/: Dockerfile  docker-autobash-entrypoint.sh  importdata.sh  modifname.sh  startautobash  updateProject.sh
Plugin1/nbproject/: project.properties
Plugin2/: build.xml
Plugin2/nbproject/: genfiles.properties  project.properties  project.xml
Plugin3/: build.xml
Plugin3/nbproject/: genfiles.properties  project.properties
main_plugin/nbproject/: build-impl.xml
project/: autobash.sh  comp.sh
project/Plugin1/: CMakeLists.txt  build.xml  comp.sh
project/Plugin1/nbproject/: build-impl.xml~  genfiles.properties  project.xml
project/Plugin2/: CMakeLists.txt  comp.sh
project/Plugin2/nbproject/: build-impl.xml  project.properties
project/Plugin3/: CMakeLists.txt  comp.sh
project/Plugin3/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
project/main_plugin/: .gitignore  CMakeLists.txt  build.xml  comp.sh
project/main_plugin/lib/: README.md
project/main_plugin/nbproject/: genfiles.properties  project.properties  project.xml
project/pctrplugin/: CMakeLists.txt  build.xml  comp.sh
project/pctrplugin/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
project/testplugin/: .gitignore  CMakeLists.txt  build.xml  comp.sh
project/testplugin/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
project/testplugin/src/fr/pctronique/testplugin/: AddPluginInterface.java  NewMain.java
(+17 files in other folders)
